--- a/src/Style/footer.module.css
+++ b/src/Style/footer.module.css
@@ -1,14 +1,15 @@
-.footerContainer{
-    position: fixed;
-    bottom: 0;
-    background-color: papayawhip;
-    width: 100%;
-    font-size: 1.5rem;
-    display: flex;
-    justify-content: center;
-    height: 5vh;
-    align-items: center;
+.footerContainer {
+  position: fixed;
+  bottom: 0;
+  background-color: papayawhip;
+  width: 100%;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: center;
+  height: 5vh;
+  align-items: center;
+  height: fit-content;
 }
-.footerContainer>span{
-    margin: 0 1rem;
+.footerContainer > span {
+  margin: 0 1rem;
 }
